--- a/MavenWebApp/pom.xml
+++ b/MavenWebApp/pom.xml
@@ -15,7 +15,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.5.1</version>
                 <configuration>
-                    <source>1.8xxx</source>
+                    <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
             </plugin>
